--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Mesh, Computer Vision, Rendering">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MaterialSeg3D: Segmenting Dense Materials from 2D Priors for 3D Assets</title>
-
+ <title>MM 2024 (Oral)</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
   <script>
@@ -464,12 +464,20 @@ Extensive quantitative and qualitative experiments demonstrate the effectiveness
 <!--   <div class="container is-max-desktop content"> -->
     <!--/ Abstract. -->
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{li2024materialseg3d,
+
+   <pre><code>
+  @article{2024MaterialSeg3D,
+  title={MaterialSeg3D: Segmenting Dense Materials from 2D Priors for 3D Assets},
+  author={ Li, Zeyu  and  Gan, Ruitong  and  Luo, Chuanchen  and  Wang, Yuxi  and  Liu, Jiaheng  and  Zhang, Ziwei Zhu Man  and  Li, Qing  and  Yin, Xucheng  and  Zhang, Zhaoxiang  and  Peng, Junran },
+  year={2024},
+}</code></pre>
+      <pre><code>@article{li2024materialseg3d,
   title     = {MaterialSeg3D: Segmenting Dense Materials from 2D Priors for 3D Assets},
   author    = {Li, Zeyu and Gan, Ruitong and Luo, Chuanchen and Wang, Yuxi and Liu, Jiaheng and Zhang, Ziwei Zhu Man and Li, Qing and Yin, Xucheng and Zhang, Zhaoxiang and Peng, Junran},
   journal   = {arXiv preprint arXiv:2404.13923},
   year      = {2024}
 }</code></pre>
+
 <!--  </div> -->
 <!--     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
