--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Mesh, Computer Vision, Rendering">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MaterialSeg3D: Segmenting Dense Materials from 2D Priors for 3D Assets</title>
- <title>MM 2024 (Oral)</title>
+<!--  <title>MM 2024 (Oral)</title> -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
   <script>
